--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title></title>
 	<!-- Webix Library -->
+	<script src="https://cdn.jsdelivr.net/npm/autonumeric@4.10.5/dist/autoNumeric.min.js"></script>
+
 	<script type="text/javascript" src="//cdn.webix.com/pro/9.0/webix.js?{VERSION}"></script>
 	<link rel="stylesheet" type="text/css" href="//cdn.webix.com/pro/9.0/webix.css?{VERSION}">
 
 	<!-- Icons -->
-	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/3.6.95/css/materialdesignicons.min.css" crossorigin="anonymous">
-	
+	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/3.6.95/css/materialdesignicons.min.css"
+		crossorigin="anonymous">
+
 	<!-- App -->
 	<script type="text/javascript" src="codebase/app.js?{VERSION}"></script>
 	<link rel="stylesheet" type="text/css" href="codebase/app.css?{VERSION}">
 	<script>
-		webix.ready(function(){
+
+		webix.ready(function () {
 			if (webix.env.touch)
 				webix.ui.fullScreen();
 			else if (webix.CustomScroll)
 				webix.CustomScroll.init();
-		
+
 			const app = new AppDemo({});
+
 			app.render();
+			// Theo dõi DOM và xóa thông báo không mong muốn
+			const observer = new MutationObserver(() => {
+				const messageAreas = document.querySelectorAll(".webix_message_area .webix_message div");
+				messageAreas.forEach((message) => {
+					if (message.textContent.includes("This version of Webix is not intended for using outside of webix.com")) {
+						message.parentElement.parentElement.remove();
+					}
+				});
+			});
+
+			observer.observe(document.body, { childList: true, subtree: true });
+
 		});
+
 	</script>
 
 </head>
+
 <body></body>
+
 </html>
